# scopehal-sigrok-bridge

./: .env  .gitmodules  CMakeLists.txt  LICENSE  notes.txt
src/: SigrokSCPIServer.cpp  SigrokSCPIServer.h  WaveformServerThread.cpp  main.cpp  server.cpp  server.h  srbinding.cpp  srbinding.h
